Try to fix details on Safari

--- a/src/assets/styles/type/type.css
+++ b/src/assets/styles/type/type.css
@@ -172,24 +172,23 @@ details {
 	}
 }
 
-.markdown-alert > * + * {
-	margin-block-start: 0.5rem;
-}
-
 details {
-	padding: 1rem;
 	background: light-dark(oklch(from var(--white) l c h / 0.3), oklch(from var(--dark_grey) l c h / 0.3));
 	border: 0.05rem solid light-dark(transparent, var(--grey));
 
 	summary {
-		margin: -1rem;
 		padding: 0.5rem 1rem;
 		background: light-dark(var(--white), var(--dark_grey));
 	}
 
-	&:open summary {
-		border-bottom: 0.05rem solid light-dark(transparent, var(--grey));
-		margin: -1rem -1rem 0;
+	&:open {
+		padding: 1rem;
+
+		summary {
+			border-bottom: 0.05rem solid light-dark(transparent, var(--grey));
+			margin-block-start: -1rem;
+			margin-inline: -1rem;
+		}
 	}
 }
 
@@ -200,6 +199,10 @@ blockquote,
 	background: light-dark(oklch(from var(--white) l c h / 0.3), oklch(from var(--dark_grey) l c h / 0.3));
 	border: 0.05rem solid light-dark(transparent, var(--grey));
 	border-inline-start: 0.3rem solid var(--grey);
+}
+
+.markdown-alert > * + * {
+	margin-block-start: 0.5rem;
 }
 
 .markdown-alert-title {
